theme toggle button bug fix

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -12,17 +12,10 @@ import { Icon } from "astro-icon/components";
     >
     <div class="space-x-4 flex items-center">
       <button
-        id="light-icon"
-        class="rounded-full inline-block dark:text-white text-slate-800 text-xl p-2 transition hover:bg-slate-800 hover:text-white focus:outline-none dark:hover:text-slate-800 dark:hover:bg-white"
+        class="rounded-full dark:text-white text-slate-800 text-xl px-2 w-10 h-10 transition hover:bg-slate-800 hover:text-white focus:outline-none flex justify-center items-center"
       >
-        <Icon name="mdi:white-balance-sunny" />
-      </button>
-
-      <button
-        id="dark-icon"
-        class="rounded-full inline-block dark:text-white text-slate-800 text-xl p-2 transition hover:bg-slate-800 hover:text-white focus:outline-none dark:hover:text-slate-800 dark:hover:bg-white"
-      >
-        <Icon name="mdi:weather-night" />
+        <Icon name="mdi:white-balance-sunny" id="light-icon" class="inline" />
+        <Icon name="mdi:weather-night" id="dark-icon" class="inline" />
       </button>
 
       <a
