--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -21,7 +21,7 @@ interface Props {
   <body class="bg-white dark:bg-slate-800">
     <Navbar />
     <!--Main Blogs -->
-    <main class="container mx-auto px-4 md:px-8 py-6 mt-12">
+    <main class="xl:max-w-7xl container mx-auto px-4 md:px-8 py-6 mt-12">
       <slot />
       <Footer />
     </main>
