--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -5,7 +5,7 @@ import { Icon } from "astro-icon/components";
 
 <nav class="dark:bg-slate-700 bg-white shadow-md fixed w-full top-0">
   <div
-    class="container mx-auto px-4 md:px-8 flex justify-between items-center py-2"
+    class="xl:max-w-7xl container mx-auto px-4 md:px-8 flex justify-between items-center py-2"
   >
     <a href="/" class="text-2xl font-semibold text-slate-800 dark:text-white"
       >{SITE_TITLE}</a
